# dados

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: __main__.py  app.py  assets.py  layout.py
data/2019/: inscritos.csv
data/2024/: inscritos.csv
data/2025/: inscritos.csv
scripts/: event3-excel-to-csv.py
